tests/good/boxed_variable.mu
let mut x = 0
let mut y = box x