tests/bad/worked_example.mu
let mut x = box 5 
let mut y = x
let mut z = x
